[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Roman <Tesmail@i.ua>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
datetime = "^5.2"
addressbook = "^1.0.1"
adc = "^0.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
